<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/imgbarber"
    tools:context=".TercerFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearContenedorPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBarberia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@android:color/black"
            >

            <LinearLayout
                android:id="@+id/linearBarberia1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgBarberia1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:ignore="ContentDescription"
                    app:srcCompat="@drawable/img_baberia_joseph" />

                <LinearLayout
                    android:id="@+id/linearBarberiaText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#1E8179"
                        android:text="@string/nomBarber1" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#0A87B6"
                        android:text="@string/desc1" />

                    <Button
                        android:id="@+id/btnVerMasBarber1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="#434242"
                        android:text="Ver más" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBarberia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@android:color/black"
            >

            <LinearLayout
                android:id="@+id/linearBarberia2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgBarberia2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:ignore="ContentDescription"
                    app:srcCompat="@drawable/img_barberia_molano" />

                <LinearLayout
                    android:id="@+id/linearBarberiaText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#1E8179"
                        android:text="@string/nomBarber2" />

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#0A87B6"
                        android:text="@string/desc2" />

                    <Button
                        android:id="@+id/btnVerMasBarber2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="#434242"
                        android:text="Ver más" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewBarberia3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@android:color/black"
            >

            <LinearLayout
                android:id="@+id/linearBarberia3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgBarberia3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:ignore="ContentDescription"
                    app:srcCompat="@drawable/img_barberia_ruzafa" />

                <LinearLayout
                    android:id="@+id/linearBarberiaText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#1E8179"
                        android:text="@string/nomBarber3" />

                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#0A87B6"
                        android:text="@string/desc3" />

                    <Button
                        android:id="@+id/btnVerMasBarber3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="#434242"
                        android:text="Ver más" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
</FrameLayout>